--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "rust-analyzer.linkedProjects": [
+        "./board_plugin/Cargo.toml",
         "./board_plugin/Cargo.toml"
     ],
     "rust-analyzer.cargo.features": [
