--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,14 @@
 {
     "rust-analyzer.linkedProjects": [
         "./board_plugin/Cargo.toml",
-        "./board_plugin/Cargo.toml"
     ],
     "rust-analyzer.cargo.features": [
        "debug"
     ],
+
+    // "rust-analyzer.cargo.extraEnv": {
+    //     "RUSTFLAGS": "-Clinker=clang -Clink-arg=-fuse-ld=lld"
+    // },
+
     "files.autoSave": "onFocusChange"
 }
